objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>RichAds Sales</fullName>
        <description>RichAds Sales</description>
        <isActive>true</isActive>
        <values>
            <fullName>Automatically Unqualified</fullName>
        </values>
        <values>
            <fullName>Manually Unqualified</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Outreach</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Recycled</fullName>
        </values>
        <values>
            <fullName>Sales Accepted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SaaS Sales</fullName>
        <description>SaaS Sales</description>
        <isActive>true</isActive>
        <values>
            <fullName>Automatically Unqualified</fullName>
        </values>
        <values>
            <fullName>Manually Unqualified</fullName>
        </values>
        <values>
            <fullName>Marketing Nurturing</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Outreach</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Recycled</fullName>
        </values>
        <values>
            <fullName>Sales Accepted</fullName>
        </values>
        <values>
            <fullName>Unsubscribed</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Agency_Clients__c</fullName>
        <description>Agency Clients.  Ads only.  Hidden for all except Finance and Ads</description>
        <inlineHelpText>Agency Clients</inlineHelpText>
        <label>Agency Clients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agency_Name_Buyer__c</fullName>
        <description>Name of the ad agency buying ads on behalf of the brand.  Hidden from all users except finance and Ads.</description>
        <inlineHelpText>Name of the ad agency buying ads on behalf of the brand</inlineHelpText>
        <label>Agency Name (Buyer)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AKQA</fullName>
                </value>
                <value>
                    <fullName>Avenue A Razorfish</fullName>
                </value>
                <value>
                    <fullName>Butler, Shine Stern +</fullName>
                </value>
                <value>
                    <fullName>Carat Fusion</fullName>
                </value>
                <value>
                    <fullName>Digitas</fullName>
                </value>
                <value>
                    <fullName>Godfry Q &amp; Partners</fullName>
                </value>
                <value>
                    <fullName>MEC</fullName>
                </value>
                <value>
                    <fullName>Media Storm</fullName>
                </value>
                <value>
                    <fullName>Mindshare</fullName>
                </value>
                <value>
                    <fullName>Moxie Interactive</fullName>
                </value>
                <value>
                    <fullName>Ogilvy</fullName>
                </value>
                <value>
                    <fullName>OMD</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PhD</fullName>
                </value>
                <value>
                    <fullName>Spark Communications</fullName>
                </value>
                <value>
                    <fullName>Universal McCann</fullName>
                </value>
                <value>
                    <fullName>Wieden + Kennedy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Behavior_Score__c</fullName>
        <label>Behavior Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Language__c</fullName>
        <description>This field brings the first language when we convert the lead into an account</description>
        <inlineHelpText>This field brings the first language when we convert the lead into an account</inlineHelpText>
        <label>Company First Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FRENCH</fullName>
                </value>
                <value>
                    <fullName>GERMAN</fullName>
                </value>
                <value>
                    <fullName>CHINESE</fullName>
                </value>
                <value>
                    <fullName>CZECH</fullName>
                </value>
                <value>
                    <fullName>DANISH</fullName>
                </value>
                <value>
                    <fullName>DUTCH</fullName>
                </value>
                <value>
                    <fullName>ENGLISH</fullName>
                </value>
                <value>
                    <fullName>FINNISH</fullName>
                </value>
                <value>
                    <fullName>HUNGARIAN</fullName>
                </value>
                <value>
                    <fullName>ITALIAN</fullName>
                </value>
                <value>
                    <fullName>JAPANESE</fullName>
                </value>
                <value>
                    <fullName>NORWEGIAN</fullName>
                </value>
                <value>
                    <fullName>POLISH</fullName>
                </value>
                <value>
                    <fullName>PORTUGUESE</fullName>
                </value>
                <value>
                    <fullName>ROMANIAN</fullName>
                </value>
                <value>
                    <fullName>RUSSIAN</fullName>
                </value>
                <value>
                    <fullName>SPANISH</fullName>
                </value>
                <value>
                    <fullName>SWEDISH</fullName>
                </value>
                <value>
                    <fullName>TURKISH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E-commerce</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Merchandising</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Technology/Engineering</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Digital Marketing</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C-level</fullName>
                </value>
                <value>
                    <fullName>SVP</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Entry</fullName>
                </value>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>Owner/Founder</fullName>
                </value>
                <value>
                    <fullName>Senior Director</fullName>
                </value>
                <value>
                    <fullName>Senior Manager</fullName>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Board member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Aging__c</fullName>
        <description>Value in days for Lead Status &quot;Sales Accepted&quot; or &quot;Qualified&quot;
Blank Values are for Different Lead Status</description>
        <formula>IF( 

OR(
ISPICKVAL( Status ,&quot;Sales Accepted&quot;),
ISPICKVAL( Status ,&quot;Qualified&quot;)
)
, ROUND(NOW()-CreatedDate, 0), null)</formula>
        <inlineHelpText>Value in days for Lead Status &quot;Sales Accepted&quot; or &quot;Qualified&quot;
Blank Values are for Different Lead Status</inlineHelpText>
        <label>Lead Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Profile__c</fullName>
        <label>LinkedIn Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>List_Acquisition__c</fullName>
        <label>List Acquisition</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LeadGenius</fullName>
                </value>
                <value>
                    <fullName>Datanyze</fullName>
                </value>
                <value>
                    <fullName>Sales Navigator</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Leads_Aging__c</fullName>
        <formula>IF( ISPICKVAL( Status , &quot;Open&quot;) , ROUND(NOW()-CreatedDate, 0), null)</formula>
        <label>Open Leads Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualified_Lead_Aging__c</fullName>
        <formula>IF( ISPICKVAL( Status , &quot;Qualified&quot;) , ROUND(NOW()-CreatedDate, 0), null)</formula>
        <label>Qualified Lead Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <formula>Owner:Queue.QueueName</formula>
        <label>Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>Asia/Pacific</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Accepted_Lead_Aging__c</fullName>
        <formula>IF( ISPICKVAL( Status , &quot;Sales Accepted&quot;) , ROUND(NOW()-CreatedDate, 0), null)</formula>
        <label>Sales Accepted Lead Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <description>This field transfers to subregion field at the account level when converted from lead to account</description>
        <inlineHelpText>This field transfers to subregion field at the account level when converted from lead to account</inlineHelpText>
        <label>Sub Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>DACH</fullName>
                </value>
                <value>
                    <fullName>FraBeLux</fullName>
                </value>
                <value>
                    <fullName>Nordics</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>US East</fullName>
                </value>
                <value>
                    <fullName>US West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unqualified_Reason__c</fullName>
        <description>Select an Option when Manually Unqualified Lead Status is Selected</description>
        <inlineHelpText>Select an Option when Manually Unqualified Lead Status is Selected</inlineHelpText>
        <label>Unqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wrong e-mail</fullName>
                </value>
                <value>
                    <fullName>Personal e-mail</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Company size</fullName>
                </value>
                <value>
                    <fullName>Wrong person</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_Comment__c</fullName>
        <description>Web comment from filling out web form on &quot;Contact Us&quot; page: http://www.richrelevance.com/contact</description>
        <label>Web Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Date__c</fullName>
        <description>Used for integration/Upgrade with Marketo in October 2016</description>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program_Id__c</fullName>
        <description>Created for the Marketo Upgrade/Update October 2016.</description>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program__c</fullName>
        <description>New field for Marketo Sync/upgrade to take place in October.</description>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Comments_c__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_City__c</fullName>
        <description>Created for Marketo Upgrade/Update in October 2016</description>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Company__c</fullName>
        <description>Created for Marketo Upgrade/Update in October 2016</description>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Country__c</fullName>
        <description>Created for Marketo Update/Upgrade in October 2016</description>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Metropolitan_Area__c</fullName>
        <description>Created for Marketo Upgrade/Update in October 2016.</description>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Phone_Area_Code__c</fullName>
        <description>Created for Marketo Upgrade/Update in October 2016.</description>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Postal_Code__c</fullName>
        <description>Created for Marketo Upgrade/Update October 2016.</description>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_State_Region__c</fullName>
        <description>Created for Marketo Upgrade/Update in October 2016.</description>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Lead_Score__c</fullName>
        <description>Marketo field for Lead Score required for upgrade on 9/29</description>
        <label>Lead Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Referrer__c</fullName>
        <description>Created for the Marketo Upgrade/Update October 2016.</description>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Search_Engine__c</fullName>
        <description>Created for the Marketo Upgrade/Update October 2016.</description>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Search_Phrase__c</fullName>
        <description>Created for the Marketo Upgrade/Update October 2016.</description>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Source_Info__c</fullName>
        <description>Created for the Marketo Upgrade/Update October 2016.</description>
        <label>Original Source Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Source_Type__c</fullName>
        <description>Created for the Marketo Upgrade/Update October 2016.</description>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_campaign__c</fullName>
        <label>utm_campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_medium__c</fullName>
        <label>utm_medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_source__c</fullName>
        <label>utm_source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_term__c</fullName>
        <label>utm_term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xuid__c</fullName>
        <label>xuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>SaaS</fullName>
        <active>true</active>
        <businessProcess>SaaS Sales</businessProcess>
        <description>SaaS Lead Process</description>
        <label>SaaS</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Unqualified_Reason_Required</fullName>
        <active>true</active>
        <description>If Status is Manually Unqualified and Unqualified reason is empty a message will prompt the user to select an option</description>
        <errorConditionFormula>AND( 
ISPICKVAL( Status , &quot;Manually Unqualified&quot;), 
ISPICKVAL( Unqualified_Reason__c , &quot;&quot; ) 
)</errorConditionFormula>
        <errorDisplayField>Unqualified_Reason__c</errorDisplayField>
        <errorMessage>Please select an Option for Unqualified Reason</errorMessage>
    </validationRules>
</CustomObject>